@@ -1,3 +1,8 @@
+2010-03-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* kern/ieee1275/openfw.c (grub_children_iterate): Skip device itself if
+	returned by firmware.
+
 2010-03-30  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* loader/i386/multiboot_mbi2.c (retrieve_video_parameters): Fix
